--- a/MarkDown/前端概念.md
+++ b/MarkDown/前端概念.md
@@ -30,6 +30,16 @@
 
 
 
+#### *Session*
 
+会话，通过在服务器记录信息确定用户身份
+
+
+
+#### *Cookie*
+
+<a href="http://blog.csdn.net/fangaoxin/article/details/6952954/"> Cookie/Session机制详解</a>
+
+通过在客户端记录信息确定用户身份
 
 
