--- a/MarkDown/前端概念.md
+++ b/MarkDown/前端概念.md
@@ -10,6 +10,22 @@
 
 展现和样式
 
+#### *React*
+
+Facebook开源的一种前端框架
+
+
+
+#### *Node*
+
+Node 是服务器的 JavaScript 运行环境，提供 API 与操作系统互动。
+
+主要用途：
+
+- 开发前端应用
+- 快速搭建服务
+- 架设网站
+
 
 
 #### *JavaScript*
